Added a few blocks

--- a/index.html
+++ b/index.html
@@ -68,13 +68,253 @@
         <div class="container">
           <h3 class="title-29">Who are we</h3>
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
-            aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis
-            aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
-            occaecat cupidatat
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et
+            dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
+            ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat
+            nulla pariatur. Excepteur sint occaecat cupidatat
           </p>
         </div>
       </section>
+
+      <section class="section gray-bg advantages">
+        <div class="container">
+          <div class="row row-3">
+            <div class="col-3">
+              <h4>We use less water</h4>
+              <p>Lorem ipsum dolor sit amet, consecte
+                sectetur adipisicing elit, tation omne
+                ullamco laboris nisi ut aliqolore.</p>
+            </div>
+            <div class="col-3">
+              <h4>We use less water</h4>
+              <p>Lorem ipsum dolor sit amet, consecte
+                sectetur adipisicing elit, tation omne
+                ullamco laboris nisi ut aliqolore.</p>
+            </div>
+            <div class="col-3">
+              <h4>We believe in recycling</h4>
+              <p>Lorem ipsum dolor sit amet, consecte
+                sectetur adipisicing elit, tation omne
+                ullamco laboris nisi ut aliqolore.</p>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section class="section priorities" style="background-image: url('images/priorities.png');">
+        <div class="container">
+          <h3 class="title-29 text-center">Priorities go first</h3>
+          <p class="text-center">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore
+            et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+          </p>
+          <div class="row flex-wrap text-center">
+
+            <div class="col-3 card">
+              <div class="card-inner">
+                <h4 class="card-title ">Company</h4>
+                <p>
+                  “Lorem ipsum dolor
+                  sit amet, consectetur
+                  adipisicing elit sed do”.
+                </p>
+                <div class="card-author">
+                  <div class="author-name">Adam Johns</div>
+                  <div class="author-position">Account manager</div>
+                </div>
+              </div>
+            </div>
+            <div class="col-3 card">
+              <div class="card-inner">
+                <h4 class="card-title ">Company</h4>
+                <p>
+                  “Lorem ipsum dolor
+                  sit amet, consectetur
+                  adipisicing elit sed do”.
+                </p>
+                <div class="card-author">
+                  <div class="author-name">Adam Johns</div>
+                  <div class="author-position">Account manager</div>
+                </div>
+              </div>
+            </div>
+            <div class="col-3 card">
+              <div class="card-inner">
+                <h4 class="card-title ">Company</h4>
+                <p>
+                  “Lorem ipsum dolor
+                  sit amet, consectetur
+                  adipisicing elit sed do”.
+                </p>
+                <div class="card-author">
+                  <div class="author-name">Adam Johns</div>
+                  <div class="author-position">Account manager</div>
+                </div>
+              </div>
+            </div>
+            <div class="col-3 card">
+              <div class="card-inner">
+                <h4 class="card-title ">Company</h4>
+                <p>
+                  “Lorem ipsum dolor
+                  sit amet, consectetur
+                  adipisicing elit sed do”.
+                </p>
+                <div class="card-author">
+                  <div class="author-name">Adam Johns</div>
+                  <div class="author-position">Account manager</div>
+                </div>
+              </div>
+            </div>
+            <div class="col-3 card">
+              <div class="card-inner">
+                <h4 class="card-title ">Company</h4>
+                <p>
+                  “Lorem ipsum dolor
+                  sit amet, consectetur
+                  adipisicing elit sed do”.
+                </p>
+                <div class="card-author">
+                  <div class="author-name">Adam Johns</div>
+                  <div class="author-position">Account manager</div>
+                </div>
+              </div>
+            </div>
+            <div class="col-3 card">
+              <div class="card-inner">
+                <h4 class="card-title ">Company</h4>
+                <p>
+                  “Lorem ipsum dolor
+                  sit amet, consectetur
+                  adipisicing elit sed do”.
+                </p>
+                <div class="card-author">
+                  <div class="author-name">Adam Johns</div>
+                  <div class="author-position">Account manager</div>
+                </div>
+              </div>
+            </div>
+
+          </div>
+        </div>
+      </section>
+
+      <section class="section black-bg section-what-we-do section-center">
+        <div class="container">
+          <h3 class="title-29">What exactly do we do</h3>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et
+            dolore magna aliqua. Ut enim ad minim veniam, quis
+          </p>
+        </div>
+      </section>
+      <section class="section black-bg section-slider section-center">
+        <div class="container">
+          <ul>
+            <li><a href="">Projects</a></li>
+            <li><a href="">Travel</a></li>
+            <li><a href="">Mission</a></li>
+            <li><a href="">Photos</a></li>
+          </ul>
+          <div class="row flex-wrap text-center">
+
+            <div class="col-3 section-slider__card">
+              <div class="section-slider__card-inner">
+                <div class="section-slider__card-img">
+                  <img src="images/phone-card-icon.png" alt="phone">
+                </div>
+                <h4>SPORT</h4>
+                <p>
+                  “Lorem ipsum dolor
+                  sit amet, consectetur
+                  adipisicing elit sed do”.
+                </p>
+                <div class="card-author">
+                  <div class="author-name">Adam Johns</div>
+                  <div class="author-position">Account manager</div>
+                </div>
+              </div>
+            </div>
+
+            <div class="col-3 section-slider__card">
+              <div class="section-slider__card-inner">
+                <div class="section-slider__card-img">
+                  <img src="images/barbell-card-icon.png" alt="barbell">
+                </div>
+                <h4>SPORT</h4>
+                <p>
+                  “Lorem ipsum dolor
+                  sit amet, consectetur
+                  adipisicing elit sed do”.
+                </p>
+                <div class="card-author">
+                  <div class="author-name">Adam Johns</div>
+                  <div class="author-position">Account manager</div>
+                </div>
+              </div>
+            </div>
+
+            <div class="col-3 section-slider__card">
+              <div class="section-slider__card-inner">
+                <div class="section-slider__card-img">
+                  <img src="images/kettlebell-card-icon.png" alt="kettlebell">
+                </div>
+                <h4>SPORT</h4>
+                <p>
+                  “Lorem ipsum dolor
+                  sit amet, consectetur
+                  adipisicing elit sed do”.
+                </p>
+                <div class="card-author">
+                  <div class="author-name">Adam Johns</div>
+                  <div class="author-position">Account manager</div>
+                </div>
+              </div>
+            </div>
+
+          </div>
+        </div>
+      </section>
+
+      <section class="section gray-bg section-center section-quote">
+        <div class="container">
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
+            incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
+          </p>
+          <div class="author">David Johnson</div>
+        </div>
+      </section>
+
+      <section class="section black-bg section-nature">
+        <div class="container">
+          <div class="section-nature__text">
+            <h3>Nature is above all</h3>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et
+              dolore magna aliqua.
+            </p>
+          </div>
+          <div class="section-nature__img" style="background-image: url('images/section-nature-photo.jpg')">
+
+          </div>
+        </div>
+      </section>
+
+      <section class="section section-offer" style="background-image: url('images/section-offer-photo.png')">
+        <div class="container">
+          <div class="section-offer__text">
+            <h1>BUY YOUR
+              TICKETS</h1>
+            <p>
+              Lorem ipsum dolor sit amet, consec- tetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et
+              dolore
+            </p>
+            <a href="#" class="btn">Here</a>
+          </div>
+        </div>
+      </section>
+
     </main>
 
   </div>
