Added responsive, final version

--- a/index.html
+++ b/index.html
@@ -210,69 +210,133 @@
       </section>
       <section class="section black-bg section-slider section-center">
         <div class="container">
-          <ul>
-            <li><a href="">Projects</a></li>
-            <li><a href="">Travel</a></li>
-            <li><a href="">Mission</a></li>
-            <li><a href="">Photos</a></li>
-          </ul>
-          <div class="row flex-wrap text-center">
 
-            <div class="col-3 section-slider__card">
-              <div class="section-slider__card-inner">
-                <div class="section-slider__card-img">
-                  <img src="images/phone-card-icon.png" alt="phone">
+          <div class="tabs">
+            <ul class="tabs__caption">
+              <li class="active">Projects</li>
+              <li>Travel</li>
+              <li>Mission</li>
+              <li>Photos</li>
+            </ul>
+
+            <div class="tabs__content active">
+              <div class="row flex-wrap text-center">
+
+                <div class="col-3 section-slider__card">
+                  <div class="section-slider__card-inner">
+                    <div class="section-slider__card-img">
+                      <img src="images/phone-card-icon.png" alt="phone">
+                    </div>
+                    <h4>SPORT</h4>
+                    <p>
+                      “Lorem ipsum dolor
+                      sit amet, consectetur
+                      adipisicing elit sed do”.
+                    </p>
+                    <div class="card-author">
+                      <div class="author-name">Adam Johns</div>
+                      <div class="author-position">Account manager</div>
+                    </div>
+                  </div>
                 </div>
-                <h4>SPORT</h4>
-                <p>
-                  “Lorem ipsum dolor
-                  sit amet, consectetur
-                  adipisicing elit sed do”.
-                </p>
-                <div class="card-author">
-                  <div class="author-name">Adam Johns</div>
-                  <div class="author-position">Account manager</div>
+
+                <div class="col-3 section-slider__card">
+                  <div class="section-slider__card-inner">
+                    <div class="section-slider__card-img">
+                      <img src="images/barbell-card-icon.png" alt="barbell">
+                    </div>
+                    <h4>SPORT</h4>
+                    <p>
+                      “Lorem ipsum dolor
+                      sit amet, consectetur
+                      adipisicing elit sed do”.
+                    </p>
+                    <div class="card-author">
+                      <div class="author-name">Adam Johns</div>
+                      <div class="author-position">Account manager</div>
+                    </div>
+                  </div>
                 </div>
+
+                <div class="col-3 section-slider__card">
+                  <div class="section-slider__card-inner">
+                    <div class="section-slider__card-img">
+                      <img src="images/kettlebell-card-icon.png" alt="kettlebell">
+                    </div>
+                    <h4>SPORT</h4>
+                    <p>
+                      “Lorem ipsum dolor
+                      sit amet, consectetur
+                      adipisicing elit sed do”.
+                    </p>
+                    <div class="card-author">
+                      <div class="author-name">Adam Johns</div>
+                      <div class="author-position">Account manager</div>
+                    </div>
+                  </div>
+                </div>
+
               </div>
             </div>
-
-            <div class="col-3 section-slider__card">
-              <div class="section-slider__card-inner">
-                <div class="section-slider__card-img">
-                  <img src="images/barbell-card-icon.png" alt="barbell">
-                </div>
-                <h4>SPORT</h4>
-                <p>
-                  “Lorem ipsum dolor
-                  sit amet, consectetur
-                  adipisicing elit sed do”.
-                </p>
-                <div class="card-author">
-                  <div class="author-name">Adam Johns</div>
-                  <div class="author-position">Account manager</div>
-                </div>
-              </div>
+            <div class="tabs__content">
+              <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ex optio incidunt consequatur, nihil neque
+                odio distinctio vero. Nulla quas, officiis possimus cum consequatur, ea illum dolorum impedit, aliquid
+                soluta animi.
+                Ullam, similique quasi totam eos perferendis, quo ipsa corrupti laudantium suscipit animi neque
+                distinctio rerum esse error vero pariatur veritatis rem eaque nisi repudiandae accusantium modi?
+                Impedit
+                reprehenderit ex similique.
+                Enim ipsam excepturi, vero expedita aut adipisci atque mollitia molestias illo nesciunt repellat nam
+                eius odit magni aliquid? Eius rerum libero excepturi quae architecto distinctio! Quae a eligendi
+                ducimus
+                alias?
+                Omnis aspernatur exercitationem reiciendis dolorem ratione alias at in necessitatibus est temporibus,
+                totam illo eos doloremque corrupti quis quidem culpa ipsum! Deserunt ab quas porro modi, voluptates
+                qui
+                dolorem eius.
+                Deleniti ipsa accusamus accusantium id nemo, tempore omnis tenetur, laudantium repellendus officiis
+                dolores a asperiores commodi est iste, amet repellat. Doloribus, nulla et. Vel, nobis minus! Eos quasi
+                magni repellat!</p>
             </div>
-
-            <div class="col-3 section-slider__card">
-              <div class="section-slider__card-inner">
-                <div class="section-slider__card-img">
-                  <img src="images/kettlebell-card-icon.png" alt="kettlebell">
-                </div>
-                <h4>SPORT</h4>
-                <p>
-                  “Lorem ipsum dolor
-                  sit amet, consectetur
-                  adipisicing elit sed do”.
-                </p>
-                <div class="card-author">
-                  <div class="author-name">Adam Johns</div>
-                  <div class="author-position">Account manager</div>
-                </div>
-              </div>
+            <div class="tabs__content">
+              <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ex optio incidunt consequatur, nihil neque
+                odio distinctio vero. Nulla quas, officiis possimus cum consequatur, ea illum dolorum impedit, aliquid
+                soluta animi.
+                Ullam, similique quasi totis dolorem ratione alias at in necessitatibus est temporibus, totam illo eos
+                doloremque corrupti quis quidem culpa ipsum! Deserunt ab quas porro modi, voluptates qui dolorem eius.
+                Deleniti ipsa accusamus accusantium id nemo, tempore omnis tenetur, laudantium repellendus officiis
+                dolores a asperiores commodi est iste, amet repellat. Doloribus, nulla et. Vel, nobis minus! Eos quasi
+                magni repellat!</p>
             </div>
-
+            <div class="tabs__content">
+              <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ex optio incidunt consequatur, nihil neque
+                odio distinctio vero. Nulla quas,
+                officiis possimus cum consequatur, ea illum dolorum impedit, aliquid soluta animi.
+                Ullam, similique quasi totam eos perferendis, quo ipsa corrupti laudantium suscipit animi neque
+                distinctio rerum esse
+                error vero pariatur veritatis rem eaque nisi repudiandae accusantium modi? Impedit reprehenderit ex
+                similique.
+                Enim ipsam excepturi, vero expeditaor, sit amet consectetur adipisicing elit. Ex optio incidunt
+                consequatur, nihil neque odio distinctio vero. Nulla quas,
+                officiis possimus cum consequatur, ea illum dolorum impedit, aliquid soluta animi.
+                Ullam, similique quasi totam eos perferendis, quo ipsa corrupti laudantium suscipit animi neque
+                distinctio rerum esse
+                error vero pariatur veritatis rem eaque nisi repudiandae accusantium modi? Impedit reprehenderit ex
+                similique.
+                Enim ipsam excepturi, vero expedita aut adipisci atque mollitia molestias illo nesciunt repellat nam
+                eius odit magni aliquid? Eius rerum libero excepturi quae architecto distinctio! Quae a eligendi
+                ducimus
+                alias?
+                Omnis aspernatur exercitationem reiciendis dolorem ratione alias at in necessitatibus est temporibus,
+                totam illo eos doloremque corrupti quis quidem culpa ipsum! Deserunt ab quas porro modi, voluptates
+                qui
+                dolorem eius.
+                Deleniti ipsa accusamus accusantium id nemo, tempore omnis tenetur, laudantium repellendus officiis
+                dolores a asperiores commodi est iste, amet repellat. Doloribus, nulla et. Vel, nobis minus! Eos quasi
+                magni repellat!</p>
+            </div>
           </div>
+
         </div>
       </section>
 
@@ -315,9 +379,183 @@
         </div>
       </section>
 
+      <section class="section black-bg section-projects">
+        <div class="container">
+
+          <div class="row row-2 flex-wrap">
+            <div class="col-2">
+              <div class="col-2__inner">
+                <div class="project-date">
+                  Projects / 20th August
+                </div>
+                <h4 class="title-21">
+                  Something new has just arrived
+                </h4>
+                <p>
+                  Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore
+                  et dolore magna aliqua. Ut enim ad minim v architecto beatae vitae dicta sunt es. omne essentiale
+                  dolor liquam.
+                </p>
+              </div>
+            </div>
+
+
+            <div class="col-2">
+              <div class="col-2__inner">
+                <img src="images/projects-img-1.png" alt="body">
+              </div>
+            </div>
+          </div>
+
+          <div class="row row-2 flex-wrap-reverse">
+            <div class="col-2">
+              <div class="col-2__inner">
+                <img src="images/projects-img-2.png" alt="calendar">
+              </div>
+            </div>
+
+            <div class="col-2">
+              <div class="col-2__inner">
+                <div class="project-date">
+                  Projects / 20th August
+                </div>
+                <h4 class="title-21">
+                  Something new has just arrived
+                </h4>
+                <p>
+                  Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore
+                  et dolore magna aliqua. Ut enim ad minim v architecto beatae vitae dicta sunt es. omne essentiale
+                  dolor liquam.
+                </p>
+              </div>
+            </div>
+          </div>
+
+          <div class="row row-2 flex-wrap">
+            <div class="col-2">
+              <div class="col-2__inner">
+                <div class="project-date">
+                  Projects / 20th August
+                </div>
+                <h4 class="title-21">
+                  Something new has just arrived
+                </h4>
+                <p>
+                  Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore
+                  et dolore magna aliqua. Ut enim ad minim v architecto beatae vitae dicta sunt es. omne essentiale
+                  dolor liquam.
+                </p>
+              </div>
+            </div>
+
+            <div class="col-2">
+              <div class="col-2__inner">
+                <img src="images/projects-img-3.png" alt="burger">
+              </div>
+            </div>
+          </div>
+
+        </div>
+      </section>
+
+      <section class="section gray-bg section-trips">
+        <div class="container">
+          <div class="row row-3 flex-wrap text-center">
+            <div class="col-3">
+              <div class="trips-text">Lorem ipsum dolor sit</div>
+              <div class="trips-date">Trips / 16th March, 2019</div>
+            </div>
+            <div class="col-3">
+              <div class="trips-text">Lorem ipsum dolor sit</div>
+              <div class="trips-date">Trips / 16th March, 2019</div>
+            </div>
+            <div class="col-3">
+              <div class="trips-text">Lorem ipsum dolor sit</div>
+              <div class="trips-date">Trips / 16th March, 2019</div>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section class="section black-bg section-center section-quote_2">
+        <div class="container">
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
+            incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
+          </p>
+          <div class="author">David Johnson</div>
+        </div>
+      </section>
     </main>
 
+    <footer class="footer">
+      <section class="section gray-bg section-footer">
+        <div class="container">
+
+          <div class="row flex-wrap">
+            <div class="footer-col-soc">
+              <h4 class="title-21">About</h4>
+              <p>
+                Lorem ipsum dolor sit amet, consec
+                tetur adipisicing elit, sed do eiusmod
+                tempor incididunt ultimam quantum
+              </p>
+              <ul class="social-media">
+                <li><a class="facebook" href="#">
+                    <img src="images/facebook-icon.svg" alt="facebook">
+                  </a></li>
+                <li><a class="instagram" href="#">
+                    <img src="images/instagram-icon.svg" alt="instagram">
+                  </a></li>
+                <li><a class="twitter" href="#">
+                    <img src="images/twitter-icon.svg" alt="twitter">
+                  </a></li>
+                <li><a class="youtube" href="#">
+                    <img src="images/youtube-icon.svg" alt="youtube">
+                  </a></li>
+                <li><a class="snapchat" href="#">
+                    <img src="images/snapchat-icon.svg" alt="snapchat">
+                  </a></li>
+              </ul>
+            </div>
+            <div class="row row-f-col flex-wrap">
+              <div class="footer-col">
+                <h4 class="title-21">About</h4>
+                <ul>
+                  <li><a href="#">Team</a></li>
+                  <li><a href="#">Join us</a></li>
+                  <li><a href="#">Ethic</a></li>
+                  <li><a href="#">Goals</a></li>
+                </ul>
+              </div>
+              <div class="footer-col">
+                <h4 class="title-21">About</h4>
+                <ul>
+                  <li><a href="#">Team</a></li>
+                  <li><a href="#">Join us</a></li>
+                  <li><a href="#">Ethic</a></li>
+                  <li><a href="#">Goals</a></li>
+                </ul>
+              </div>
+              <div class="footer-col">
+                <h4 class="title-21">About</h4>
+                <ul>
+                  <li><a href="#">Team</a></li>
+                  <li><a href="#">Join us</a></li>
+                  <li><a href="#">Ethic</a></li>
+                  <li><a href="#">Goals</a></li>
+                </ul>
+              </div>
+            </div>
+          </div>
+
+        </div>
+      </section>
+      <div class="footer-bottom"></div>
+    </footer>
+
   </div>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
   <script src="js/main.js"></script>
 </body>
 
